fix spacing between cards

--- a/material-overrides/assets/stylesheets/home.css
+++ b/material-overrides/assets/stylesheets/home.css
@@ -92,7 +92,7 @@ a.hero-link {
   border-radius: var(--md-border-radius);
   background-color: var(--dark);
   border: var(--md-border-width) solid var(--light-green);
-  max-width: 550px;
+  flex: 1 1 calc(33.333% - 1rem);
   display: flex;
   flex-direction: column;
   align-items: center;
@@ -170,7 +170,6 @@ h2.cta-title {
   flex-direction: column;
   align-items: flex-start;
   background-color: var(--dark);
-  color: var(--md-default-fg-color);
   padding: 1.5rem;
   border-radius: var(--md-border-radius);
   flex: 1 1 calc(33.333% - 1rem);
